<resources>
    <string name="app_name">NFC Play!</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="select">Select</string>
    <string name="activar_nfc">Activar NFC</string>
    <string name="historial">Historial</string>
    <string name="nfc">NFC</string>
    <string name="juegos">Juegos</string>
    <string name="juegos_nfc">Juegos NFC</string>
    <string name="leer_nfc">Leer NFC</string>
    <string name="escribir_nfc">Escribir NFC</string>
    <string name="otros">Otros</string>
    <string name="leer_nfc_btn">Leer NFC</string>
    <string name="username_hint">Usuario</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button_text">Login</string>
    <string name="todo">TODO</string>
    <string name="game_title">Game Title</string>
    <string name="players_1_10">Players: 1-10</string>
    <string name="ingresa_texto">ingresa_texto</string>
    <string name="escribir_etiqueta">escribir_etiquta</string>
    <string name="escribir_app">Escribir App</string>
    <string name="escribir_texto">Escribir Texto</string>
    <string name="escribir_url">Escribir URL</string>
    <string name="introduce_el_texto">Introduce el texto</string>
    <string name="introduce_una_url">Introduce una URL</string>
    <string name="pulse_el_bot_n_para_escanear_una_o_m_s_tarjetas_nfc">Pulse el botón para escanear una o más tarjetas NFC</string>
    <string name="leer_tarjetas_nfc">LEER TARJETAS NFC</string>
    <string name="aqu_puedes_escribir_en_una_tarjeta_nfc">Aquí puedes escribir en una tarjeta NFC</string>
    <string name="escribir_en_tarjeta_nfc">ESCRIBIR EN TARJETA NFC</string>
    <string name="nfc_play">NFC Play!</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="reg_strate_aqu">Regístrate aquí</string>
    <string name="sobre_nfc_play">NFC Play! es una aplicación creada por Alfonso Sánchez en 2024 como Trabajo de Fin de Grado Superior de Desarrollo de Aplicaciones Multiplataforma. El fin de la aplicación es conectar el mundo dígital y de las tecnologías, con los móviles y el NFC, con el analógico y de juegos tradicionales en la calle con amigos.</string>
    <string name="ajustes">Ajustes</string>
    <string name="tema_oscuro">Tema Oscuro</string>
    <string name="activarnfc_ajustes">Activar NFC</string>
    <string name="versi_n_de_la_aplicaci_n_1_0">Versión de la aplicación: 1.0</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="nfc_play_2024">NFC Play! 2024</string>
</resources>