<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_tema"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:layout_marginTop="132dp"
        android:padding="16dp"
        android:text="@string/tema_oscuro"
        android:fontFamily="@font/silkscreen_regular"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_nfc"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/silkscreen_regular"
        android:padding="16dp"
        android:text="@string/activarnfc_ajustes"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_tema" />
    <TextView
        android:id="@+id/version_app"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:text="@string/versi_n_de_la_aplicaci_n_1_0"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_nfc" />


    <Button
        android:id="@+id/btn_cerrar_sesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="116dp"
        android:layout_marginTop="68dp"
        android:padding="16dp"
        android:text="@string/cerrar_sesi_n"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/version_app" />

    <TextView
        android:id="@+id/copyright_text"
        android:layout_width="243dp"
        android:layout_height="33dp"
        android:layout_marginBottom="116dp"
        android:gravity="center"
        android:text="@string/nfc_play_2024"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
