<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"  android:layout_height="wrap_content"
        android:layout_weight="1"  android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/text_game_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/game_title"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image_game"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_games_black"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/text_players"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/players_1_10"
            android:textColor="#757575"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>