<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <!-- Logo y título de la aplicación -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
            app:srcCompat="@drawable/ic_games_black" />

        <TextView
            android:layout_width="205dp"
            android:layout_height="74dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="NFC Play!"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Campo de nombre de usuario -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_field_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/username_hint"
        app:counterEnabled="true"
        app:counterMaxLength="30">

        <EditText
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            tools:ignore="VisualLintTextFieldSize"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo de contraseña -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_field_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/password_hint"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:autofillHints=""
            tools:ignore="LabelFor,VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botón de inicio de sesión -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/login_button_text"
        android:textAllCaps="false"
        app:cornerRadius="8dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

    <!-- Texto "¿No tienes cuenta? Regístrate aquí" -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="¿No tienes cuenta? "
        android:textSize="16sp"
        android:textColor="@color/white" />

    <!-- Botón "Crear una cuenta" -->
    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Regístrate aquí"
        android:textAllCaps="false"
        android:layout_marginTop="8dp"
        app:cornerRadius="8dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

</LinearLayout>
